2020-10-22  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Rearrange 32-bit color.

	Both Windows and X11 interpret 32-bit color using masks rather than
	byte order. We ned to align with that.

	* graph.h (grColor): Update value type.
	* graph/grobjs.c (grFindColor),
	graph/grfill.c (gr_fill_hline_32),
	graph/gblblit.c (grSetTargetPenBrush),
	graph/grblit.c (blit_mono_to_rgb32): Updated.

2020-10-22  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] s/uint32/uint32_t/ and popularize it.

	* graph/grconfig.h: Define uint32_t here...
	* graph/x11/grx11.c: ...  instead of uint32 here and update all users.
	* graph/graph.h: Include "grconfig.h".

2020-10-20  Werner Lemberg  <wl@gnu.org>

	* Version 2.10.4 released.
	==========================


	Tag sources with `VER-2-10-4.

	* README: Updated.
	* man/*.1: Updated.

2020-10-19  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftcommon.c (FTDemo_Icon): Decrease the glyph height.

2020-10-18  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph/win32] Explicitly use BITMAPINFO.

	* graph/win32/grwin32.c (grWin32Surface): Replace `pbmi' and `bmi'
	with `bmiHeader' and `bmiColors'.
	(gr_win32_surface_{init,resize}, Message_Process): Updated.

2020-10-17  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/strbuf.c (strbuf_init): Adjust to fix `FTDemo_Version'.
	* src/ftcommon.[ch] (FTDemo_Version): Clarify argument.

2020-10-15  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgrid,ftview,ftstring] Add icons.

	* src/ftcommon.[ch] (FTDemo_Icon, icon_span): Draw and set icons.
	* src/ftgrid.c, src/ftview.c, src/ftstring.c (main): Add icons.

2020-10-15  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph/win32] Icon support.

	* graph/win32/grwin32.c (gr_win32_surface_set_icon): Implement it.
	(gr_win32_surface_init): Initialize the driver backend.
	(gr_win32_surface_done): Destroy icons.

2020-10-15  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph/x11] Icon support.
