@@ -1,3 +1,12 @@
+2020-10-23  Alexei Podtelezhnikov  <apodtele@gmail.com>
+
+	[graph/win32] Enable 15/16/32-bit modes.
+
+	The rgb555 mode uses legacy blitting and is somewhat broken.
+
+	* src/win32/grwin32.c (gr_win32_surface_refresh_rectangle,
+	gr_win32_surface_init): Updated.
+
 2020-10-22  Alexei Podtelezhnikov  <apodtele@gmail.com>
 
 	[graph] Rearrange 32-bit color.
